# TamagoC

./: README.md  configure.ac  default.nix
src/: Makefile.am
src/core/: config.h  core.c  core.h  types.h
